[tool.poetry]
name = "flask-redis"
version = "0.1.0"
description = ""
authors = ["DukeNgn <triduc2311m@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^22.3.0"
Flask = "^2.1.2"
redis = "^4.3.1"
Flask-Caching = "^1.10.1"
requests = "^2.27.1"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
